@@ -172,3 +172,7 @@ It is not necessary to tell fhem that there are other logs.
 
 2008-03-24  
    -- Bugfix: FHT-View with the current CVS-FHEM was broken: Small changes in include/fht.php
+
+2008-03-24  
+   -- Bugfix: KS300-Log now possible with Full Log like define kslog FileLog /var/tmp/ks300.log ks300:.
+   	==> Small Changes in ks300.php
